<resources>
    <string name="app_name">Ep2a</string>
    <string name="txt_codigo">Codigo de Producto</string>
    <string name="txt_descripcion">Descripcion de Producto</string>
    <string name="txt_precio">Precio del Producto</string>
    <string name="BotonRegistrar">Registrar Producto</string>
    <string name="BotonBuscar">Buscar Producto</string>
    <string name="BotonEliminar">Eliminar Producto</string>
    <string name="BotonModificar">Modificar Producto</string>
</resources>
